# viewser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
settings/: __init__.py  config_resolver.py  models.py
tests/: test_config.py  test_error_handlers.py  test_error_propagation.py  test_formatter.py  test_metadata_storage_serializer.py  test_queryset_api.py  test_remotes.py  test_viewser.py
viewser/: __init__.py  animations.py  ascii_art.py  calls.py  checks.py  cli.py  cli_utils.py  context_objects.py  crud.py  crud_operations.py  documentation.py  error_handling.py  errors.py  exception_handling.py  exceptions.py  fetching.py  formatting.py  hirearchical_dict.py  logs.py  models.py  notebooks.py  operations.py  queryset.py  queryset_list.py  remotes.py  schema.py  settings.py
viewser/commands/: __init__.py  config.py  help.py  logs.py  notebooks.py  queryset.py  system.py  tables.py  transforms.py
viewser/commands/config/: cli.py
viewser/commands/documentation/: __init__.py  cli.py  formatting.py  operations.py
viewser/commands/help/: cli.py
viewser/commands/logs/: __init__.py  cli.py
viewser/commands/model/: cli.py  formatting.py
viewser/commands/notebooks/: cli.py
viewser/commands/queryset/: __init__.py  cli.py  config_drift.py  drift_alert.py  drift_detection.py  formatting.py  integrity_checks.py  models.py  operations.py  queryset_list.py  self_test.py
viewser/commands/system/: cli.py  formatting.py
viewser/data/: status-codes.json
viewser/error_handling/: __init__.py  checks.py  error_handling.py  errors.py  exceptions.py
viewser/formatting/: __init__.py  documentation_formatter.py  documentation_table_section.py  function_section.py  generic_sections.py  section.py  viewser_formatter.py
viewser/models/: queryset.py  system.py
viewser/operations/: __init__.py  documentation.py  help.py  notebooks.py  queryset.py
viewser/settings/: __init__.py  config_resolver.py  db.py  defaults.py  exceptions.py  models.py  static.py  validation.py
viewser/storage/: azure.py  db.py  metadata_storage_serializer.py  model_object.py
viewser/tests/: test_checks.py
viewser/tui/: animations.py  models.py
viewser/tui/formatting/: abc.py  conventions.py  documentation.py  (+9 more)
(+5 files in other folders)
