[tool.poetry]
name = "viewser"
version = "5.6.2"
description = ""
authors = ["peder2911 <pglandsverk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
environs = "^9.3.1"
pandas = "^1.2.3"
fitin = "^0.2.0"
pydantic = "^1.8.1"
crayons = "^0.4.0"
click = "^8.0.1"
tabulate = "^0.8.9"
toolz = "^0.11.1"
views-schema = "==2.0.0"
toml = "^0.10.2"
colorama = "^0.4.4"
PyMonad = "^2.4.0"
docker = "^5.0.0"
psutil = "^5.8.0"
strconv = "^0.4.2"
pyarrow = "^6.0.1"
views-storage = "^0.3.0"

[tool.poetry.scripts]
viewser = "viewser.cli:viewser"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
httpretty = "^1.1.3"
responses = "^0.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
