[tool.poetry]
name = "viewser"
version = "6.0.3"
description = "The Views 3 CLI tool"
authors = ["peder2911 <pglandsverk@gmail.com>"]
readme = "README.md"
homepage = "https://www.github.com/prio-data/viewser"
license = "CC-BY-NC"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
environs = "^9.3.1"
pandas = "^1.4.0"
fitin = "^0.2.0"
pydantic = "^1.8.1"
crayons = "^0.4.0"
click = "^8.0.1"
tabulate = "^0.8.9"
toolz = "^0.11.1"
views-schema = "^2.3.0"
toml = "^0.10.2"
colorama = "^0.4.4"
PyMonad = "^2.4.0"
docker = "^5.0.0"
psutil = "^5.8.0"
strconv = "^0.4.2"
pyarrow = ">9.0.0"
views-storage = "^1.1.0"

[tool.poetry.scripts]
viewser = "viewser.cli:viewser"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
httpretty = "^1.1.3"
responses = "^0.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
